# viral-topic-agent

./: .gitignore  README.md  pyproject.toml  run_demo.py
docs/: KNOWLEDGE.md
src/analysis/: __init__.py  baseline.py  category_filter.py  channel_analyzer.py  competitor_tracker.py  format_recommender.py  outlier_detector.py  publish_time_predictor.py  scoring.py  seo_analyzer.py  trend_discovery.py
src/app/: __init__.py  composition_root.py
src/config/: __init__.py  config_loader.py  secrets.py  settings.py  sources.py
src/connection/: connection_manager.py
src/delivery/: __init__.py  deliverer.py  digest_renderer.py  digest_service.py  email_deliverer.py  notion_deliverer.py  slack_deliverer.py  smtp_transport.py
src/domain/: __init__.py
src/generation/: __init__.py  concept_generator.py  llm_client.py  llm_generation_provider.py  provider.py  script_generator.py
src/infrastructure/: auth_manager.py  clock.py  datasource.py  http_transport.py  keyword_metrics_provider.py  resilient_data_source.py  result.py  template_performance_strategy.py  youtube_data_source.py  youtube_error_mapping.py
src/orchestration/: automation_scheduler.py
tests/: _extras_free_probe.py  conftest.py  edge_fakes.py  integration_support.py  scheduler_support.py  test_auth_manager.py  test_automation_scheduler.py  test_automation_scheduler_dependency_properties.py  test_automation_scheduler_order_properties.py  test_automation_scheduler_schedule_properties.py  test_automation_scheduler_summary_properties.py  test_baseline.py  test_baseline_properties.py  test_category_filter.py  test_category_filter_properties.py  test_channel_analyzer.py  test_channel_analyzer_properties.py  test_clock.py  test_competitor_tracker.py  test_competitor_tracker_add_properties.py  test_competitor_tracker_isolation_properties.py  test_competitor_tracker_spike_properties.py  test_composition_root.py  test_composition_root_configuration_properties.py  test_concept_generator.py  test_concept_generator_properties.py  test_config_dotenv_properties.py  test_config_loader.py  test_config_precedence_properties.py  test_config_sources.py  test_config_store.py  test_config_store_properties.py  test_config_validation_properties.py  test_connection_manager.py  test_connection_manager_retry_properties.py  test_connection_manager_tagging_properties.py  test_datasource.py  test_deliverer_conformance.py  test_delivery.py  test_delivery_destinations.py  (+50 more)
(+38 files in other folders)
