[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-topic-agent"
version = "0.1.0"
description = "An automated agent that analyzes a YouTube channel, discovers viral content ideas and templates, scores them, tracks competitors, and delivers a recurring digest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.hypothesis]
# Property-based tests run a minimum of 100 examples per the design.
# Use `@settings(max_examples=100)` on individual tests; this profile documents the baseline.
