[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-topic-agent"
version = "0.1.0"
description = "An automated agent that analyzes a YouTube channel, discovers viral content ideas and templates, scores them, tracks competitors, and delivers a recurring digest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]
# Optional integration extras for the Real Provider Integration edge layers.
# Each third-party client library is pinned to an exact version and confined to
# the infrastructure/generation/delivery edges, so the dependency-free core and
# its property tests run without installing these (Requirement 15).
# OAuth for the YouTube Analytics API (owned-channel audience activity).
youtube = [
    "google-auth==2.53.0",
    "google-api-python-client==2.197.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.hypothesis]
# Property-based tests run a minimum of 100 examples per the design.
# Use `@settings(max_examples=100)` on individual tests; this profile documents the baseline.
